fix spacing and underline for main nav items

--- a/shared/src/shared/assets/styles/main.css
+++ b/shared/src/shared/assets/styles/main.css
@@ -228,6 +228,10 @@ html {
 		@apply after:border-lightIris;
 	}
 
+	.button--main-nav:hover {
+		@apply after:border-lightIris;
+	}
+
 	.astro-code {
 		@apply overflow-hidden py-7 px-10;
 	}
